frb_rust/src/dart_api_dl/include/dart_api.h


typedef struct _Dart_Isolate* Dart_Isolate;
typedef struct _Dart_Handle* Dart_Handle;
typedef struct {
  int32_t version;
  const uint8_t* vm_snapshot_data;
  const uint8_t* vm_snapshot_instructions;
  Dart_IsolateGroupCreateCallback create_group;
  Dart_InitializeIsolateCallback initialize_isolate;
  Dart_IsolateShutdownCallback shutdown_isolate;
  Dart_IsolateCleanupCallback cleanup_isolate;
  Dart_IsolateGroupCleanupCallback cleanup_group;
  Dart_ThreadStartCallback thread_start;
  Dart_ThreadExitCallback thread_exit;
  Dart_FileOpenCallback file_open;
  Dart_FileReadCallback file_read;
  Dart_FileWriteCallback file_write;
  Dart_FileCloseCallback file_close;
  Dart_EntropySource entropy_source;
  Dart_GetVMServiceAssetsArchive get_service_assets;
  bool start_kernel_isolate;
  Dart_CodeObserver* code_observer;
  Dart_RegisterKernelBlobCallback register_kernel_blob;
  Dart_UnregisterKernelBlobCallback unregister_kernel_blob;
} Dart_InitializeParams;
DART_EXPORT DART_WARN_UNUSED_RESULT char* Dart_Initialize(
    Dart_InitializeParams* params);
DART_EXPORT Dart_Isolate Dart_CurrentIsolate(void);
DART_EXPORT void Dart_EnterIsolate(Dart_Isolate isolate);
DART_EXPORT void Dart_KillIsolate(Dart_Isolate isolate);
DART_EXPORT void Dart_NotifyIdle(int64_t deadline);
DART_EXPORT void Dart_NotifyLowMemory(void);
DART_EXPORT void Dart_StartProfiling(void);
DART_EXPORT void Dart_StopProfiling(void);
DART_EXPORT void Dart_ThreadDisableProfiling(void);
DART_EXPORT void Dart_ThreadEnableProfiling(void);
DART_EXPORT void Dart_AddSymbols(const char* dso_name,
                                 void* buffer,
                                 intptr_t buffer_size);
DART_EXPORT void Dart_ExitIsolate(void);
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle
Dart_CreateSnapshot(uint8_t** vm_snapshot_data_buffer,
                    intptr_t* vm_snapshot_data_size,
                    uint8_t** isolate_snapshot_data_buffer,
                    intptr_t* isolate_snapshot_data_size,
                    bool is_core);
DART_EXPORT bool Dart_IsKernel(const uint8_t* buffer, intptr_t buffer_size);
DART_EXPORT DART_WARN_UNUSED_RESULT char* Dart_IsolateMakeRunnable(
    Dart_Isolate isolate);
typedef int64_t Dart_Port;
typedef void (*Dart_MessageNotifyCallback)(Dart_Isolate destination_isolate);
DART_EXPORT void Dart_SetMessageNotifyCallback(
    Dart_MessageNotifyCallback message_notify_callback);
DART_EXPORT Dart_MessageNotifyCallback Dart_GetMessageNotifyCallback(void);
DART_EXPORT bool Dart_ShouldPauseOnStart(void);
DART_EXPORT void Dart_SetShouldPauseOnStart(bool should_pause);
DART_EXPORT bool Dart_IsPausedOnStart(void);
DART_EXPORT void Dart_SetPausedOnStart(bool paused);
DART_EXPORT bool Dart_ShouldPauseOnExit(void);
DART_EXPORT void Dart_SetShouldPauseOnExit(bool should_pause);
DART_EXPORT bool Dart_IsPausedOnExit(void);
DART_EXPORT void Dart_SetPausedOnExit(bool paused);
DART_EXPORT void Dart_SetStickyError(Dart_Handle error);
DART_EXPORT bool Dart_HasStickyError(void);
DART_EXPORT Dart_Handle Dart_GetStickyError(void);
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle Dart_HandleMessage(void);
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle
Dart_WaitForEvent(int64_t timeout_millis);
DART_EXPORT bool Dart_HandleServiceMessages(void);
DART_EXPORT bool Dart_HasServiceMessages(void);
DART_EXPORT void Dart_ExitScope(void);
DART_EXPORT bool Dart_IsPrecompiledRuntime(void);