frb_rust/src/dart_api_dl/include/dart_tools_api.h


DART_EXPORT int64_t Dart_TimelineGetMicros();