dart_sys/src/lib.rs


extern "C" {
    #[doc = " Enters an isolate. After calling this function,"]
    #[doc = " the current isolate will be set to the provided isolate."]
    #[doc = ""]
    #[doc = " Requires there to be no current isolate. Multiple threads may not be in"]
    #[doc = " the same isolate at once."]
    pub fn Dart_EnterIsolate(isolate: Dart_Isolate);
}

extern "C" {
    #[doc = " Kills the given isolate."]
    #[doc = ""]
    #[doc = " This function has the same effect as dart:isolate's"]
    #[doc = " Isolate.kill(priority:immediate)."]
    #[doc = " It can interrupt ordinary Dart code but not native code. If the isolate is"]
    #[doc = " in the middle of a long running native function, the isolate will not be"]
    #[doc = " killed until control returns to Dart."]
    #[doc = ""]
    #[doc = " Does not require a current isolate. It is safe to kill the current isolate if"]
    #[doc = " there is one."]
    pub fn Dart_KillIsolate(isolate: Dart_Isolate);
}

extern "C" {
    #[doc = " Notifies the VM that the embedder expects to be idle until |deadline|. The VM"]
    #[doc = " may use this time to perform garbage collection or other tasks to avoid"]
    #[doc = " delays during execution of Dart code in the future."]
    #[doc = ""]
    #[doc = " |deadline| is measured in microseconds against the system's monotonic time."]
    #[doc = " This clock can be accessed via Dart_TimelineGetMicros()."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_NotifyIdle(deadline: i64);
}

extern "C" {
    #[doc = " Notifies the VM that the system is running low on memory."]
    #[doc = ""]
    #[doc = " Does not require a current isolate. Only valid after calling Dart_Initialize."]
    pub fn Dart_NotifyLowMemory();
}

extern "C" {
    #[doc = " Starts the CPU sampling profiler."]
    pub fn Dart_StartProfiling();
}

extern "C" {
    #[doc = " Stops the CPU sampling profiler."]
    #[doc = ""]
    #[doc = " Note that some profile samples might still be taken after this fucntion"]
    #[doc = " returns due to the asynchronous nature of the implementation on some"]
    #[doc = " platforms."]
    pub fn Dart_StopProfiling();
}

extern "C" {
    #[doc = " Notifies the VM that the current thread should not be profiled until a"]
    #[doc = " matching call to Dart_ThreadEnableProfiling is made."]
    #[doc = ""]
    #[doc = " NOTE: By default, if a thread has entered an isolate it will be profiled."]
    #[doc = " This function should be used when an embedder knows a thread is about"]
    #[doc = " to make a blocking call and wants to avoid unnecessary interrupts by"]
    #[doc = " the profiler."]
    pub fn Dart_ThreadDisableProfiling();
}

extern "C" {
    #[doc = " Notifies the VM that the current thread should be profiled."]
    #[doc = ""]
    #[doc = " NOTE: It is only legal to call this function *after* calling"]
    #[doc = "   Dart_ThreadDisableProfiling."]
    #[doc = ""]
    #[doc = " NOTE: By default, if a thread has entered an isolate it will be profiled."]
    pub fn Dart_ThreadEnableProfiling();
}

extern "C" {
    #[doc = " Register symbol information for the Dart VM's profiler and crash dumps."]
    #[doc = ""]
    #[doc = " This consumes the output of //topaz/runtime/dart/profiler_symbols, which"]
    #[doc = " should be treated as opaque."]
    pub fn Dart_AddSymbols(
        dso_name: *const ::std::os::raw::c_char,
        buffer: *mut ::std::os::raw::c_void,
        buffer_size: isize,
    );
}

extern "C" {
    #[doc = " Exits an isolate. After this call, Dart_CurrentIsolate will"]
    #[doc = " return NULL."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_ExitIsolate();
}

extern "C" {
    #[doc = " Creates a full snapshot of the current isolate heap."]
    #[doc = ""]
    #[doc = " A full snapshot is a compact representation of the dart vm isolate heap"]
    #[doc = " and dart isolate heap states. These snapshots are used to initialize"]
    #[doc = " the vm isolate on startup and fast initialization of an isolate."]
    #[doc = " A Snapshot of the heap is created before any dart code has executed."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate. Not available in the precompiled"]
    #[doc = " runtime (check Dart_IsPrecompiledRuntime)."]
    #[doc = ""]
    #[doc = " \\param buffer Returns a pointer to a buffer containing the"]
    #[doc = "   snapshot. This buffer is scope allocated and is only valid"]
    #[doc = "   until the next call to Dart_ExitScope."]
    #[doc = " \\param size Returns the size of the buffer."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_CreateSnapshot(
        vm_snapshot_data_buffer: *mut *mut u8,
        vm_snapshot_data_size: *mut isize,
        isolate_snapshot_data_buffer: *mut *mut u8,
        isolate_snapshot_data_size: *mut isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns whether the buffer contains a kernel file."]
    #[doc = ""]
    #[doc = " \\param buffer Pointer to a buffer that might contain a kernel binary."]
    #[doc = " \\param buffer_size Size of the buffer."]
    #[doc = ""]
    #[doc = " \\return Whether the buffer contains a kernel binary (full or partial)."]
    pub fn Dart_IsKernel(buffer: *const u8, buffer_size: isize) -> bool;
}

extern "C" {
    #[doc = " Make isolate runnable."]
    #[doc = ""]
    #[doc = " When isolates are spawned, this function is used to indicate that"]
    #[doc = " the creation and initialization (including script loading) of the"]
    #[doc = " isolate is complete and the isolate can start."]
    #[doc = " This function expects there to be no current isolate."]
    #[doc = ""]
    #[doc = " \\param isolate The isolate to be made runnable."]
    #[doc = ""]
    #[doc = " \\return NULL if successful. Returns an error message otherwise. The caller"]
    #[doc = " is responsible for freeing the error message."]
    pub fn Dart_IsolateMakeRunnable(isolate: Dart_Isolate) -> *mut ::std::os::raw::c_char;
}

#[doc = " A port is used to send or receive inter-isolate messages"]
pub type Dart_Port = i64;
#[doc = " A message notification callback."]
#[doc = ""]
#[doc = " This callback allows the embedder to provide an alternate wakeup"]
#[doc = " mechanism for the delivery of inter-isolate messages.  It is the"]
#[doc = " responsibility of the embedder to call Dart_HandleMessage to"]
#[doc = " process the message."]
pub type Dart_MessageNotifyCallback =
    ::std::option::Option<unsafe extern "C" fn(dest_isolate: Dart_Isolate)>;

extern "C" {
    #[doc = " Allows embedders to provide an alternative wakeup mechanism for the"]
    #[doc = " delivery of inter-isolate messages. This setting only applies to"]
    #[doc = " the current isolate."]
    #[doc = ""]
    #[doc = " Most embedders will only call this function once, before isolate"]
    #[doc = " execution begins. If this function is called after isolate"]
    #[doc = " execution begins, the embedder is responsible for threading issues."]
    pub fn Dart_SetMessageNotifyCallback(message_notify_callback: Dart_MessageNotifyCallback);
}

extern "C" {
    #[doc = " Query the current message notify callback for the isolate."]
    #[doc = ""]
    #[doc = " \\return The current message notify callback for the isolate."]
    pub fn Dart_GetMessageNotifyCallback() -> Dart_MessageNotifyCallback;
}

extern "C" {
    #[doc = " If the VM flag `--pause-isolates-on-start` was passed this will be true."]
    #[doc = ""]
    #[doc = " \\return A boolean value indicating if pause on start was requested."]
    pub fn Dart_ShouldPauseOnStart() -> bool;
}

extern "C" {
    #[doc = " Override the VM flag `--pause-isolates-on-start` for the current isolate."]
    #[doc = ""]
    #[doc = " \\param should_pause Should the isolate be paused on start?"]
    #[doc = ""]
    #[doc = " NOTE: This must be called before Dart_IsolateMakeRunnable."]
    pub fn Dart_SetShouldPauseOnStart(should_pause: bool);
}

extern "C" {
    #[doc = " Is the current isolate paused on start?"]
    #[doc = ""]
    #[doc = " \\return A boolean value indicating if the isolate is paused on start."]
    pub fn Dart_IsPausedOnStart() -> bool;
}

extern "C" {
    #[doc = " Called when the embedder has paused the current isolate on start and when"]
    #[doc = " the embedder has resumed the isolate."]
    #[doc = ""]
    #[doc = " \\param paused Is the isolate paused on start?"]
    pub fn Dart_SetPausedOnStart(paused: bool);
}

extern "C" {
    #[doc = " If the VM flag `--pause-isolates-on-exit` was passed this will be true."]
    #[doc = ""]
    #[doc = " \\return A boolean value indicating if pause on exit was requested."]
    pub fn Dart_ShouldPauseOnExit() -> bool;
}

extern "C" {
    #[doc = " Override the VM flag `--pause-isolates-on-exit` for the current isolate."]
    #[doc = ""]
    #[doc = " \\param should_pause Should the isolate be paused on exit?"]
    #[doc = ""]
    pub fn Dart_SetShouldPauseOnExit(should_pause: bool);
}

extern "C" {
    #[doc = " Is the current isolate paused on exit?"]
    #[doc = ""]
    #[doc = " \\return A boolean value indicating if the isolate is paused on exit."]
    pub fn Dart_IsPausedOnExit() -> bool;
}

extern "C" {
    #[doc = " Called when the embedder has paused the current isolate on exit and when"]
    #[doc = " the embedder has resumed the isolate."]
    #[doc = ""]
    #[doc = " \\param paused Is the isolate paused on exit?"]
    pub fn Dart_SetPausedOnExit(paused: bool);
}

extern "C" {
    #[doc = " Called when the embedder has caught a top level unhandled exception error"]
    #[doc = " in the current isolate."]
    #[doc = ""]
    #[doc = " NOTE: It is illegal to call this twice on the same isolate without first"]
    #[doc = " clearing the sticky error to null."]
    #[doc = ""]
    #[doc = " \\param error The unhandled exception error."]
    pub fn Dart_SetStickyError(error: Dart_Handle);
}

extern "C" {
    #[doc = " Does the current isolate have a sticky error?"]
    pub fn Dart_HasStickyError() -> bool;
}

extern "C" {
    #[doc = " Gets the sticky error for the current isolate."]
    #[doc = ""]
    #[doc = " \\return A handle to the sticky error object or null."]
    pub fn Dart_GetStickyError() -> Dart_Handle;
}

extern "C" {
    #[doc = " Handles the next pending message for the current isolate."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_HandleMessage() -> Dart_Handle;
}

extern "C" {
    #[doc = " Drains the microtask queue, then blocks the calling thread until the current"]
    #[doc = " isolate recieves a message, then handles all messages."]
    #[doc = ""]
    #[doc = " \\param timeout_millis When non-zero, the call returns after the indicated"]
    #[doc = "number of milliseconds even if no message was received."]
    #[doc = " \\return A valid handle if no error occurs, otherwise an error handle."]
    pub fn Dart_WaitForEvent(timeout_millis: i64) -> Dart_Handle;
}

extern "C" {
    #[doc = " Handles any pending messages for the vm service for the current"]
    #[doc = " isolate."]
    #[doc = ""]
    #[doc = " This function may be used by an embedder at a breakpoint to avoid"]
    #[doc = " pausing the vm service."]
    #[doc = ""]
    #[doc = " This function can indirectly cause the message notify callback to"]
    #[doc = " be called."]
    #[doc = ""]
    #[doc = " \\return true if the vm service requests the program resume"]
    #[doc = " execution, false otherwise"]
    pub fn Dart_HandleServiceMessages() -> bool;
}

extern "C" {
    #[doc = " Does the current isolate have pending service messages?"]
    #[doc = ""]
    #[doc = " \\return true if the isolate has pending service messages, false otherwise."]
    pub fn Dart_HasServiceMessages() -> bool;
}
